--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://psyho.github.com/adam
+url: http://adam.pohorecki.pl
 title: Adam Pohorecki
 subtitle: Test first, ask questions later
 author: Adam Pohorecki
